envs/prod/capacitor/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: capacitor-svc
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: capacitor
spec:
  type: LoadBalancer
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 9000
