envs/prod/capacitor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  defaultBackend:
    service:
      name: capacitor
      port:
        number: 9000
  ingressClassName: tailscale
  tls:
    - hosts:
        - capacitor
